// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountForm AccountField render dropdown 1`] = `
<div
  className="o-field u-m-0"
>
  <Label
    className=""
    error={false}
    htmlFor=""
  >
    fields.multiple.label
  </Label>
  <Aware
    className="u-m-0"
    error={false}
    fieldProps={Object {}}
    fullwidth={true}
    id=""
    label="fields.multiple.label"
    name="multiple"
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
        Object {
          "label": "Option 2",
          "value": "option2",
        },
      ]
    }
    placeholder="fields.multiple.placeholder"
    secondaryLabels={Object {}}
    size="medium"
    t={
      [MockFunction] {
        "calls": Array [
          Array [
            "fields.multiple.label",
            Object {
              "_": "multiple",
            },
          ],
          Array [
            "fields.multiple.placeholder",
            Object {
              "_": "",
            },
          ],
          Array [
            "accountForm.password.hide",
          ],
          Array [
            "accountForm.password.show",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "fields.multiple.label",
          },
          Object {
            "isThrow": false,
            "value": "fields.multiple.placeholder",
          },
          Object {
            "isThrow": false,
            "value": "accountForm.password.hide",
          },
          Object {
            "isThrow": false,
            "value": "accountForm.password.show",
          },
        ],
      }
    }
    type="select"
  />
</div>
`;

exports[`AccountForm AccountField render password 1`] = `
<div
  className="o-field u-m-0"
>
  <Label
    className=""
    error={false}
    htmlFor=""
  >
    fields.passphrase.label
  </Label>
  <InputPassword
    error={false}
    hideLabel="accountForm.password.hide"
    id=""
    placeholder="fields.passphrase.placeholder"
    showLabel="accountForm.password.show"
    showVisibilityButton={true}
    type="password"
    value=""
  />
</div>
`;

exports[`AccountForm AccountField should render 1`] = `
<div
  className="o-field u-m-0"
>
  <Label
    className=""
    error={false}
    htmlFor=""
  >
    fields.username.label
  </Label>
  <Input
    error={false}
    fullwidth={true}
    id=""
    placeholder="fields.username.placeholder"
    size="medium"
    type="text"
    value=""
  />
</div>
`;

exports[`AccountForm AccountFields should render 1`] = `
<div>
  <Field
    format={[Function]}
    name="username"
    parse={[Function]}
  >
    [Function]
  </Field>
  <Field
    format={[Function]}
    name="passphrase"
    parse={[Function]}
  >
    [Function]
  </Field>
</div>
`;

exports[`AccountForm AccountFields should render encrypted fields with placeholder 1`] = `
<div>
  <Field
    format={[Function]}
    name="username"
    parse={[Function]}
  >
    [Function]
  </Field>
  <Field
    format={[Function]}
    name="passphrase"
    parse={[Function]}
  >
    [Function]
  </Field>
</div>
`;

exports[`AccountForm should redirect to OAuthForm 1`] = `
<Wrapper
  oauth={
    Object {
      "scope": "test",
    }
  }
/>
`;

exports[`AccountForm should render 1`] = `
<div>
  <AccountFields
    fillEncrypted={false}
    manifestFields={
      Object {
        "passphrase": Object {
          "encrypted": true,
          "required": true,
          "type": "password",
        },
        "username": Object {
          "encrypted": false,
          "required": true,
          "role": "identifier",
          "type": "text",
        },
      }
    }
    t={
      [MockFunction] {
        "calls": Array [
          Array [
            "accountForm.submit.label",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "accountForm.submit.label",
          },
        ],
      }
    }
  />
  <DefaultButton
    className="u-mt-2 u-mb-1-half"
    extension="full"
    label="accountForm.submit.label"
    onclick={[Function]}
  />
</div>
`;
